Fixed section ID

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <!--Section is used to group together content-->
-    <section id = "About">
+    <section id = "profile">
         <div class = "section_pic">
             <img src="./assets/profile-pic.jpg" alt="My Profile Picture"/>
         </div>
