--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <p class="section_text_p2">Computer Science Student</p>
             <div class="btn-container">
                 <button 
-                class="btn-color-2" 
+                class=" btn" 
                 onclick="window.open('./assets/Rami-Mikha-CS-Resume.pdf')">
                 Download Resume
                 </button>
                 <button 
-                class="btn-color-1" 
+                class="btn" 
                 onclick="location.href='./#contact'">
                 Contact Info
                 </button>
